force-app/main/default/objects/Apttus_Config2__ApplicationFeature__c/Apttus_Config2__ApplicationFeature__c.object-meta.xml
<CustomObject>
    <description>An object to contain features in the Applications, where Applications are Apttus products like CPQ, CLM etc.</description>
    <label>Application Feature</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Application Features</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>