force-app/main/default/objects/Apttus_Config2__ApplicationFeature__c/fields/Apttus_Config2__ApplicationName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ApplicationName__c</fullName>
    <description>Name of the application</description>
    <inlineHelpText>Name of the application</inlineHelpText>
    <label>Application Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPQ</fullName>
                <default>true</default>
                <label>CPQ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>