force-app/main/default/objects/Apttus_Config2__ApplicationFeature__c/fields/Apttus_Config2__DefaultId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__DefaultId__c</fullName>
    <description>Default Identifier of the Application Feature</description>
    <inlineHelpText>Default Identifier of the Application Feature</inlineHelpText>
    <label>DefaultId</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>