force-app/main/default/objects/Apttus_Config2__ApplicationFeature__c/fields/Apttus_Config2__FeatureName__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__FeatureName__c</fullName>
    <description>Name of the feature</description>
    <inlineHelpText>Name of the feature</inlineHelpText>
    <label>Feature Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Application Settings</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>Cart Page</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>